<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Mityaalim</string>
    <string name="events">events</string>
    <string name="investment">investments</string>
    <string name="academy">academy</string>
    <string name="budget">budget</string>
    <string name="logoContentDescription">logo</string>
    <string name="add_income">add income</string>
    <string name="add_expense">add expense</string>
    <string name="budget_name">description:</string>
    <string name="add_income_title">New income</string>
    <string name="add_expense_title">New expense</string>
    <string name="budget_sum">sum:</string>
    <string name="budget_date">date:</string>
    <string name="save">save</string>
    <string name="services">Services in the community</string>
    <string name="close_events">Close events</string>
    <string name="accession">accession</string>
    <string name="payment">payment</string>
    <string name="the_daily_tip">The Daily Tip</string>
    <string name="the_first_tip">Don\'t need - don\'t consume.
When you are debating about the feasibility of the purchase, remember that you are what you need to buy
You have already defined them in advance, in most cases, before you left the house. Don\'t be tempted to buy
A product you didn\'t plan to buy.</string>
    <string name="the_second_tip">Arrived at Super Seventy:
Hungry people buy more and less healthy - studies show that there is even a shortage
Short-term in food may lead to a change in the choice of food products and lead to a purchase
Greater consumption of less healthy food products.</string>
    <string name="the_third_tip">Do not divide into payments - try to get rid of the habit of dividing many expenses into payments, it creates a false sense of a low monthly charge. With this method, you accumulate debt over time that will drag you to a negative balance and even exceed the limit.</string>
    <string name="the_fourth_tip">Work more with cash - those who feel that their expenses are getting out of control should pay less with a credit card and more in cash. That way, at any given time you will know what your true situation is in the bank account and you will not receive a "surprise" of additional debt at the time of the monthly credit card charge.</string>
    <string name="the_fifth_tip">Do not buy under pressure - do not make purchases when you are pressed for time, tired, irritated or tense. Have you been offered an offer that you won\'t return? It\'s just a sales tactic. What you can buy today, will be there tomorrow.</string>
    <string name="the_sixth_tip">It is allowed to indulge and spend time, but if and according to the budget - set a budget for yourself for indulgences. That way, you will both enjoy life and not be tempted to spend too much. Purchase tickets on discount websites, by using coupons, through employee councils, club memberships, purchasing groups or Facebook groups. Take advantage of discounted entertainment - spending time with the children is expensive? Nature, the sea and the parks are free.</string>
    <string name="the_seventh_tip">Always compare prices and check - make it a regular habit for yourself, check prices and compare with every purchase, do a market survey, in different stores and on price comparison websites. Buy at the place that is the most profitable for you.</string>
    <string name="credit_card_details">Credit Card Details</string>
    <string name="ok">OK</string>
    <string name="credit_card_number">credit card number</string>
    <string name="cvv">cvv</string>
    <string name="card_id">card holder\'s ID</string>
    <string name="card_name">card holder\'s name</string>
    <string name="total_payment">total payment:</string>
    <string name="invalid_card">invalid card</string>
    <string name="economic_news"><u>Go to economic news</u></string>
</resources>