<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logoContentDescription"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/_60sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:text="@string/credit_card_details" />

    <EditText
        android:id="@+id/credit_card_number"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_height="wrap_content"
        android:hint="@string/credit_card_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintWidth_percent="0.7"
        android:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/year"
        style="@style/EditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="2023"
        android:maxLength="4"
        app:layout_constraintLeft_toRightOf="@id/line"
        app:layout_constraintRight_toRightOf="@id/credit_card_number"
        app:layout_constraintTop_toBottomOf="@id/credit_card_number"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:inputType="number"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/text_color"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@id/year"
        app:layout_constraintLeft_toRightOf="@id/month"
        app:layout_constraintTop_toTopOf="@id/year"
        app:layout_constraintBottom_toBottomOf="@id/year"/>

    <EditText
        android:id="@+id/month"
        style="@style/EditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="01"
        android:maxLength="2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="@id/credit_card_number"
        app:layout_constraintRight_toLeftOf="@id/line"
        app:layout_constraintTop_toBottomOf="@id/credit_card_number"
        android:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/cvv"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cvv"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/month"
        app:layout_constraintWidth_percent="0.7"
        android:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/id"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_id"
        android:maxLength="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvv"
        app:layout_constraintWidth_percent="0.7"
        android:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/name"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id"
        app:layout_constraintWidth_percent="0.7"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_payment"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/text_color"
        android:layout_marginTop="@dimen/_10sdp" />

    <TextView
        android:id="@+id/sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/text_color"
        tools:text="100"
        android:layout_marginStart="@dimen/_4sdp"
        app:layout_constraintStart_toEndOf="@id/total"
        app:layout_constraintTop_toTopOf="@id/total"/>

    <TextView
        android:id="@+id/payment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/background_green"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="2.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>