<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logoContentDescription" />

    <TextView
        android:id="@+id/add_income"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/add_income"
        android:textSize="@dimen/_17ssp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/background_green"
        app:layout_constraintDimensionRatio="2.5"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginVertical="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_expense"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/recyclerview" />
    <TextView
        android:id="@+id/add_expense"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/add_expense"
        android:textSize="@dimen/_17ssp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/background_green"
        app:layout_constraintDimensionRatio="2.5"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginVertical="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/add_income"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/recyclerview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.6"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_budget"/>

</androidx.constraintlayout.widget.ConstraintLayout>