<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background"
    tools:context="com.mityaalim.ui.main.home.HomeFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logoContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <View
        android:id="@+id/events_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/background_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/centerline"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintDimensionRatio="1" />
    <ImageView
        android:id="@+id/ic_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_event"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="@id/events_background"
        app:layout_constraintStart_toStartOf="@id/events_background"
        app:layout_constraintEnd_toEndOf="@id/events_background"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="@id/events_background"
        app:layout_constraintEnd_toEndOf="@id/events_background"
        app:layout_constraintBottom_toBottomOf="@id/events_background"/>

    <View
        android:id="@+id/investment_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/background_dark"
        app:layout_constraintTop_toTopOf="@id/events_background"
        app:layout_constraintStart_toEndOf="@id/centerline"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintDimensionRatio="1" />
    <ImageView
        android:id="@+id/ic_investment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_investment"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="@id/investment_background"
        app:layout_constraintStart_toStartOf="@id/investment_background"
        app:layout_constraintEnd_toEndOf="@id/investment_background"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/investment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/investment"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="@id/investment_background"
        app:layout_constraintEnd_toEndOf="@id/investment_background"
        app:layout_constraintBottom_toBottomOf="@id/investment_background"/>

    <View
        android:id="@+id/academy_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_dark"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/events_background"
        app:layout_constraintEnd_toStartOf="@id/centerline"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintDimensionRatio="1" />
    <ImageView
        android:id="@+id/ic_academy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_academy"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="@id/academy_background"
        app:layout_constraintStart_toStartOf="@id/academy_background"
        app:layout_constraintEnd_toEndOf="@id/academy_background"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/academy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/academy"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="@id/academy_background"
        app:layout_constraintEnd_toEndOf="@id/academy_background"
        app:layout_constraintBottom_toBottomOf="@id/academy_background"/>

    <View
        android:id="@+id/budget_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_dark"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/events_background"
        app:layout_constraintStart_toEndOf="@id/centerline"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintDimensionRatio="1" />
    <ImageView
        android:id="@+id/ic_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_budget"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="@id/budget_background"
        app:layout_constraintStart_toStartOf="@id/budget_background"
        app:layout_constraintEnd_toEndOf="@id/budget_background"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="@id/budget_background"
        app:layout_constraintEnd_toEndOf="@id/budget_background"
        app:layout_constraintBottom_toBottomOf="@id/budget_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>